finish exos 17 a 25 = toute la partie 1 -- RO2

--- a/src/HAI820I_Complements_RO/exos/exo_17.tex
+++ b/src/HAI820I_Complements_RO/exos/exo_17.tex
@@ -1,6 +1,13 @@
 % ----- Consignes exo 17 ----- %
-\begin{td-exo}[title]\, % 17 
-	
+\begin{td-exo}[Enveloppe convexe de points]\,\\ % 17 
+	Soit \(S \subseteq {\{0,1\}}^3\) qui consiste aux points suivants:
+	\begin{equation*}
+		S = \{(0,0,0), (1,1,1), (0,1,0), (1,0,1)\}
+	\end{equation*}
+	Considérons le polytope \(P = \conv(S)\). Trouver un système d'inéquations linéaires qui caractérise \(P\), c'est-à-dire tel que:
+	\begin{equation*}
+		P = \{x \in \bb R^3 \mid Ax \leq b\}
+	\end{equation*}
 \end{td-exo}
 
 % ----- Solutions exo 17 ----- %
