--- a/src/HAI820I_Complements_RO/exos/exo_18.tex
+++ b/src/HAI820I_Complements_RO/exos/exo_18.tex
@@ -1,6 +1,7 @@
 % ----- Consignes exo 18 ----- %
-\begin{td-exo}[title]\, % 18 
-	
+\begin{td-exo}[Enveloppe convexe et points extremes]\,\\ % 18
+	Soit \(S \subseteq {\{0,1\}}^n\), c'est-à-dire un ensemble de \(\{0,1\}\)-vecteurs de dimension \(n\).
+	Soit le polytope \(P = \conv(S)\). Montrer que \(x\) est un sommet de points de \(P\) si et seulement si \(x \in S\).
 \end{td-exo}
 
 % ----- Solutions exo 18 ----- %
