--- a/src/HAI820I_Complements_RO/exos/exo_19.tex
+++ b/src/HAI820I_Complements_RO/exos/exo_19.tex
@@ -1,6 +1,10 @@
 % ----- Consignes exo 19 ----- %
-\begin{td-exo}[title]\, % 19 
-	
+\begin{td-exo}[Enveloppe convexe et points extremes]\,\\ % 19 
+	Soit \(S\) l'ensemble suivant:
+	\begin{equation*}
+		S = \{x \in \bb R^3\ |\ x_1+x_3 \leq 1, x_1-x_3 \leq 0, x_1 \geq 0\}
+	\end{equation*}
+	Donner \(\conv(S)\).
 \end{td-exo}
 
 % ----- Solutions exo 19 ----- %
