--- a/src/HAI820I_Complements_RO/exos/exo_20.tex
+++ b/src/HAI820I_Complements_RO/exos/exo_20.tex
@@ -1,6 +1,8 @@
 % ----- Consignes exo 20 ----- %
-\begin{td-exo}[title]\, % 20 
-	
+\begin{td-exo}[Enveloppe convexe et points extremes]\,\\ % 20 
+	Considérons un polytope \(P \subset \bb R^n\) tel que \(P = \conv(\{x_1,\ldots,x_t\})\).
+	Montrer que si \(x\) est un point extreme de \(P\) alors \(x \in \{x_1,\ldots,x_t\}\).
+	Est-ce que \(x_j\) est forcément un point extreme de \(P\) pour tout \(j \in \{1,\ldots,t\}\)?
 \end{td-exo}
 
 % ----- Solutions exo 20 ----- %
