--- a/src/HAI820I_Complements_RO/exos/exo_22.tex
+++ b/src/HAI820I_Complements_RO/exos/exo_22.tex
@@ -1,6 +1,10 @@
 % ----- Consignes exo 22 ----- %
-\begin{td-exo}[title]\, % 22 
-	
+\begin{td-exo}[Propriétés de l'enveloppe convexe]\,\\ % 22 
+	Soit \(x_0\in \bb R^n\) et soit \(C \subseteq \bb R^n\) un convexe.
+	Montrer que 
+	\begin{equation*}
+		\conv(C \cup \{x_0\}) = \{ \lambda x + (1-\lambda)x_0\ |\ x \in C, \lambda \in \ff{0,1} \}.
+	\end{equation*}
 \end{td-exo}
 
 % ----- Solutions exo 22 ----- %
