--- a/src/HAI820I_Complements_RO/exos/exo_23.tex
+++ b/src/HAI820I_Complements_RO/exos/exo_23.tex
@@ -1,6 +1,7 @@
 % ----- Consignes exo 23 ----- %
-\begin{td-exo}[title]\, % 23 
-	
+\begin{td-exo}[Enveloppe convexe]\,\\ % 23 
+	Soit \(C\) le convexe défini comme étant l'enveloppe convexe de \(S\): \(C = \conv(S)\).
+	Montrer que tout point extreme de \(C\) appartient à \(S\).
 \end{td-exo}
 
 % ----- Solutions exo 23 ----- %
