--- a/src/HAI820I_Complements_RO/exos/exo_24.tex
+++ b/src/HAI820I_Complements_RO/exos/exo_24.tex
@@ -1,6 +1,21 @@
 % ----- Consignes exo 24 ----- %
-\begin{td-exo}[title]\, % 24 
+\begin{td-exo}[Faces]\,\\ % 24 
+	Soit \(P_\varepsilon\in \bb R^2\) le polyèdre défini par les inégalités lineaires suivantes:
+	\begin{equation*}
+		P_\varepsilon =
+		\begin{cases}
+			x_2 \geq 3\\
+			\varepsilon x_1 + (2 - \varepsilon)x_2 \geq 4\\
+			x_i \geq 0, \quad \forall i \in \{1,2\}
+		\end{cases}
+	\end{equation*}
 	
+	\begin{enumerate}
+		\item Illustrer \(P_\varepsilon\) et les inégalités dans le plan pour \(\varepsilon = -1\) et \(\varepsilon = 1\).
+		\item Quelles sont les facettes de \(P_1\)?
+		\item Soit \(\varepsilon=3\) et le polyèdre entier \(P_I = \conv(P_\varepsilon \cap \bb Z^2)\).
+		Dessiner \(P_I\) et donner les équations qui donnent l'enveloppe convexe.
+	\end{enumerate}
 \end{td-exo}
 
 % ----- Solutions exo 24 ----- %
