compile and add consignes exos 26 a 31 -- RO2

--- a/src/HAI820I_Complements_RO/exos/exo_26.tex
+++ b/src/HAI820I_Complements_RO/exos/exo_26.tex
@@ -1,6 +1,20 @@
 % ----- Consignes exo 26 ----- %
-\begin{td-exo}[title]\, % 26 
-	
+\begin{td-exo}[Génération de colonnes]\,\\ % 26 
+	On considère le problème \(PL\) suivant:
+	\begin{equation*}
+		PL = 
+		\begin{cases}
+			\min(z) = 2x_1 + 3x_2 \\
+			4x_1 + x_2 - x_3 \geq 5 \\
+			3x_1 + 2x_2 - x_4 \geq 6 \\
+			x_1 + 2x_2 - x_5 \geq 3 \\
+			x_i \geq 0, \forall i \in \{1, \ldots, 5\}
+		\end{cases}
+	\end{equation*}
+
+	Commencer la méthode de génération de colonne avec les variables \(x_1, x_3\) et \(x_4\).
+	Ecrire le problème restreint \(PL_R\).
+	Calculer les coûts réduits.
 \end{td-exo}
 
 % ----- Solutions exo 26 ----- %
