--- a/src/HAI820I_Complements_RO/exos/exo_28.tex
+++ b/src/HAI820I_Complements_RO/exos/exo_28.tex
@@ -1,5 +1,5 @@
 % ----- Consignes exo 28 ----- %
-\begin{td-exo}[title]\, % 28 
+\begin{td-exo}[Génération de colonnes: le problème de la tournée de véhicules avec fenêtres temporelles]\, % 28 
 	
 \end{td-exo}
 
