--- a/src/HAI820I_Complements_RO/exos/exo_29.tex
+++ b/src/HAI820I_Complements_RO/exos/exo_29.tex
@@ -1,6 +1,20 @@
 % ----- Consignes exo 29 ----- %
-\begin{td-exo}[title]\, % 29 
-	
+\begin{td-exo}[Lagrangien]\,\\ % 29 
+	Soit le problème \((P)\) suivant:
+	\begin{equation*}
+		(P) = 
+		\begin{cases}
+			\min f(x) = x_1^2 + x_2^2 \\
+			g(x) = 2x_1 + x_2 + 4 \leq 0 \\
+			x_i \in \bb R, \forall i \in \{1,2\}
+		\end{cases}
+	\end{equation*}
+	\begin{enumerate}
+		\item On relache la contrainte et on lui affecte le multiplicateur de Lagrange \(\lambda \geq 0\). 
+		\item Enoncer \((D)\) le problème dual lagrangien de \((P)\).
+		\item Calculer la fonction duale \(\Delta(\lambda)\) en fonction de \(\lambda\).
+		\item Résoudre le problème dual \((D)\).
+	\end{enumerate}
 \end{td-exo}
 
 % ----- Solutions exo 29 ----- %
