--- a/src/HAI820I_Complements_RO/exos/exo_30.tex
+++ b/src/HAI820I_Complements_RO/exos/exo_30.tex
@@ -1,6 +1,6 @@
 % ----- Consignes exo 30 ----- %
-\begin{td-exo}[title]\, % 30 
-	
+\begin{td-exo}[Le problème de la coloration de sommets]\,\\ % 30 
+	Donner un programme linéaire en nombres entiers qui modélise le problème de la coloration de sommets.
 \end{td-exo}
 
 % ----- Solutions exo 30 ----- %
