finish consignes RO2 + maj figures + compilation + added pattern in tikz library in common header + solved ex4 -- RO2

--- a/src/HAI820I_Complements_RO/exos/exo_04.tex
+++ b/src/HAI820I_Complements_RO/exos/exo_04.tex
@@ -28,10 +28,11 @@
 			\item L'arbre de branchement sur \(x_1\) est le suivant:
 
 			\input{../assets/tikz/td1_ex04_f2.tex}
+			
+			\item Le premier branchement sur la variable \(x_2\) correspond à la séparation de l'espace des solutions en deux parties par les deux demi-espaces \(x_2 \leq 1\) et \(x_2 \geq 2\). 
+			Si on représente graphiquement le programme linéaire en nombres entiers \(PL_0\), cela donne:
 
-			% \item et un test
-
-			% \input{../assets/tikz/td1_ex04_ftest.tex}
+			\input{../assets/tikz/td1_ex04_f3.tex}
 		\end{enumerate}
 
 		
