--- a/src/HAI820I_Complements_RO/exos/exo_32.tex
+++ b/src/HAI820I_Complements_RO/exos/exo_32.tex
@@ -1,6 +1,13 @@
 % ----- Consignes exo 32 ----- %
-\begin{td-exo}[title]\, % 32 
-	
+\begin{td-exo}[Le problème du transversal dans un graphe]\,\\ % 32 
+	On rappelle la définition suivante:
+	\vspace{2mm}
+	\begin{definition}
+		Un \defemph{transversal} (couverture) est un ensemble de sommets tel que pour chaque arete du graphe, au moins une de ses deux extremités appartient au transversal.
+	\end{definition}
+	\vspace{2mm}
+	On considère le graphe donné par la figure~\ref{fig:td4_ex31_f1}.
+	Donner le programme linéaire en nombres entiers qui permet de trouver un transversal de taille minimale dans ce graphe.
 \end{td-exo}
 
 % ----- Solutions exo 32 ----- %
