--- a/src/HAI820I_Complements_RO/exos/exo_03.tex
+++ b/src/HAI820I_Complements_RO/exos/exo_03.tex
@@ -77,6 +77,8 @@
 % ----- Solutions exo 3 ----- %
 \iftoggle{showsolutions}{ 
 	\begin{td-sol}[]\ % 3
-		
+		L'arbre d'évaluation et de séparation est donné ci-dessous:
+
+		\input{../assets/tikz/td1_ex03_f1.tex}
 	\end{td-sol}
 }{}
