--- a/src/HAI820I_Complements_RO/exos/exo_31.tex
+++ b/src/HAI820I_Complements_RO/exos/exo_31.tex
@@ -1,9 +1,11 @@
 % ----- Consignes exo 31 ----- %
 \begin{td-exo}[Le problème du stable dans un graphe]\,\\ % 31 
 	On rappelle la définition suivante:
+	\vspace{2mm}
 	\begin{definition}
 		Un \defemph{stable} dans un graphe est un ensemble de sommets qui sont deux à deux non adjacents.
 	\end{definition}
+	\vspace{2mm}
 	La matrice d'incidence (arêtes-sommets) \(A = (a_{ij})\) est une matrice \(m \times n\) définie de la manière suivante:
 	\begin{equation*}
 		a_{ij} = \begin{cases}
