maj ex 7 -- RO2 + recompile

--- a/src/HAI820I_Complements_RO/assets/tikz/td1_ex05_f1.tex
+++ b/src/HAI820I_Complements_RO/assets/tikz/td1_ex05_f1.tex
@@ -42,9 +42,9 @@
             \draw[-{Stealth}] (f) to node[below right] {\(5\)} (h);
             \draw[-{Stealth}] (f) to node[below right] {\(2\)} (i);
             
-            \draw[-{Stealth}] (g) to node[below right] {\(4\)} (t);
+            \draw[-{Stealth}] (g) to node[above right] {\(4\)} (t);
             
-            \draw[-{Stealth}] (h) to node[below right] {\(4\)} (t);
+            \draw[-{Stealth}] (h) to node[above] {\(4\)} (t);
             
             \draw[-{Stealth}] (i) to node[below right] {\(2\)} (t);
             \draw[-{Stealth}] (i) to node[below right] {\(2\)} (t);
