correction typos + rajout correction partielle exo 7 a completer -- RO2

--- a/src/HAI820I_Complements_RO/exos/exo_07.tex
+++ b/src/HAI820I_Complements_RO/exos/exo_07.tex
@@ -31,9 +31,34 @@
 				\item \(y-t\) de poids \(2\),
 				\item \(z-t\) de poids \(2\),
 				\item \(v-u\) de poids \(2\),
-				\item \(z-v\) de poids \(3\).
 			\end{itemize}
-			Le poids total de l'ACPM est \(10\).
+			Le poids total de l'ACPM est \(7\).
+
+			On reconnecte \(x\) au graphe par les 2 arêtes les moins cheres pour un poids total de \(7+6=13\).
+
+			Le degré de \(t\) est 3 donc on branche sur \(t\).
+
+			Si on retire \(ty\) du graphe, le nouvel ACPM devient
+
+			\begin{itemize}
+				\item 
+			\end{itemize}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 			Ensuite on reconnecte \(x\) avec les arêtes les moins couteuses: \\
 			Les deux plus petites arêtes partant de \(x\) sont:
