--- a/src/HAI820I_Complements_RO/exos/exo_14.tex
+++ b/src/HAI820I_Complements_RO/exos/exo_14.tex
@@ -1,6 +1,6 @@
 % ----- Consignes exo 14 ----- %
 \begin{td-exo}[Sur les coupes de Gomory]\,\\ % 14 
-	Une coupe \(ax \leq \alpha\) est dure \og{}plus profonde\fg{} qu'une coupe \(a'x \leq \alpha'\) si
+	Une coupe \(ax \leq \alpha\) est dite \og{}plus profonde\fg{} qu'une coupe \(a'x \leq \alpha'\) si
 	\begin{equation*}
 		\left\{x\in\mathcal{D}\ |\ a x \leq \alpha \right\} \subset \left\{x\in\mathcal{D}\ |\ a' x \leq \alpha' \right\},
 	\end{equation*}
