--- a/src/HAI820I_Complements_RO/dms/dm_1.tex
+++ b/src/HAI820I_Complements_RO/dms/dm_1.tex
@@ -83,7 +83,7 @@
 
             \input{../assets/tikz/dm1_ex01_f5.tex}
 
-            Enfin, on peut nettoyer visuellement la figure pour voir plus clairement l'enveloppe convexe:
+            Enfin, on peut nettoyer un peu la figure pour voir plus clairement l'enveloppe convexe:
 
             \input{../assets/tikz/dm1_ex01_f6.tex}
 
