finish reindexing the codebase - aka just recreated and moved around exercise files

--- a/src/HAI802I_Algorithmique_Avancee/dms/dm_content.tex
+++ b/src/HAI802I_Algorithmique_Avancee/dms/dm_content.tex
@@ -23,6 +23,8 @@
     \input{../dms/dm_1.tex}
     \newpage
     \input{../dms/dm_2.tex}
+    \newpage
+    \input{../dms/dm_3.tex}
     
 
     % \newpage
