--- a/src/HAI802I_Algorithmique_Avancee/dms/dm_2.tex
+++ b/src/HAI802I_Algorithmique_Avancee/dms/dm_2.tex
@@ -1,28 +1,13 @@
-\section{Partie pratique}\label{sec:s_2}
+\section{Approximation}\label{sec:s_2}
 
-\subsection{Comparaison de formulations pour le problème du voyageur de commerce}\label{subsec:ss2_1}
-% ----- Consignes exo xxx ----- %
-\begin{td-exo}[]\,\\ % xxx 
-	
-\end{td-exo}
+\subsection{Problèmes APX}\label{subsec:ss2_1}
+\input{./exos/exo_08.tex}
+\input{./exos/exo_09.tex}
+\input{./exos/exo_10.tex}
 
-% ----- Solutions exo xxx ----- %
-\iftoggle{showsolutions}{ 
-	\begin{td-sol}[]\ % xxx
-		
-	\end{td-sol}
-}{}
+\subsection{PTAS}\label{subsec:ss2_2}
+\input{./exos/exo_11.tex}
+\input{./exos/exo_12.tex}
 
-\subsection{Sur le problème du sac à dos}\label{subsec:ss2_2}
-% ----- Consignes exo xxx ----- %
-\begin{td-exo}[]\,\\ % xxx 
-	
-\end{td-exo}
-
-% ----- Solutions exo xxx ----- %
-\iftoggle{showsolutions}{ 
-	\begin{td-sol}[]\ % xxx
-		
-	\end{td-sol}
-}{}
-
+\subsection{Mesure différentielle}\label{subsec:ss2_3}
+\input{./exos/exo_13.tex}
