--- a/src/HAI820I_Complements_RO/dms/dm_2.tex
+++ b/src/HAI820I_Complements_RO/dms/dm_2.tex
@@ -1,28 +1,7 @@
 \section{Partie pratique}\label{sec:s_2}
 
 \subsection{Comparaison de formulations pour le problème du voyageur de commerce}\label{subsec:ss2_1}
-% ----- Consignes exo xxx ----- %
-\begin{td-exo}[]\,\\ % xxx 
-	
-\end{td-exo}
-
-% ----- Solutions exo xxx ----- %
-\iftoggle{showsolutions}{ 
-	\begin{td-sol}[]\ % xxx
-		
-	\end{td-sol}
-}{}
+\input{./exos/exo_07.tex}
 
 \subsection{Sur le problème du sac à dos}\label{subsec:ss2_2}
-% ----- Consignes exo xxx ----- %
-\begin{td-exo}[]\,\\ % xxx 
-	
-\end{td-exo}
-
-% ----- Solutions exo xxx ----- %
-\iftoggle{showsolutions}{ 
-	\begin{td-sol}[]\ % xxx
-		
-	\end{td-sol}
-}{}
-
+\input{./exos/exo_08.tex}
